# XinOu

./: .gitignore  CLAUDE.md  README.md  change.md  strategy.md  软件架构.md
.claude/: settings.local.json
main/: CMakeLists.txt  audio_manager.cc  audio_manager.h  audio_playback_task.cc  ble_provisioning.cc  ble_provisioning.h  bsp_board.cc  idf_component.yml  main.cc  nvs_config.cc  nvs_config.h  websocket_client.cc  websocket_client.h
server/: config.py  main.py  omni_realtime_client.py  requirements.txt  server.py
server/core/: orchestrator.py
server/modules/: asr.py  llm.py  prompt_loader.py  tts.py
server/prompts/: base.txt  classifier.txt  daily.txt
server/prompts/emotion/: anxiety.txt  loneliness.txt  relationship.txt
server/prompts/family/: expectations.txt  origin.txt
server/prompts/work/: career.txt  conflict.txt  pressure.txt
